--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>  <link rel="stylesheet" href="../CSS/style.css">
+  <head>  <link rel="stylesheet" href="../css/style.css">
     <title>
       Area/Perimeter Calculator
     
@@ -36,5 +36,5 @@
     <div id="RectianglePerimeterText" class="Texts">Your Perimeter is</div>
     <div id="RectianglePerimeterAnswer" class="Texts">0</div>
   </body>
-  <script src="../JavaScript/main.js"></script>
+  <script src="../java/java.js"></script>
 </html>
