--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>  <link rel="stylesheet" href="css/style.css">
+  <head>  <link rel="stylesheet" href="styles/styles.css">
     <title>
       Area/Perimeter Calculator
     
